--- a/style.css
+++ b/style.css
@@ -8,20 +8,50 @@ html, body
     width: 100%;
     height: 100%;
 }
+
 body{
-    font-family: 'Verdana';
-    font-size:12pt;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 12pt;
+  line-height: 1.5;
+  background-color: hsl(200, 50%, 75%);
 }
-canvas{
-    position:absolute;
-    z-index:1;
+
+#frownies {
+  line-height: 1;
+  position: absolute;
+  font-family: fixedsys, monospace;
+  font-size: 24pt;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.frowny {
+  margin: 5px;
+  display: inline-block;
+  border: solid 2px black;
+  padding: 5px;
+  border-radius: 10px;
+  transform: rotate(90deg);
+  box-shadow: 5px -5px 5px rgba(0, 0, 0, 0.25);
+}
+
+.frowny:hover {
+  padding: 10px;
+  margin-top: -5px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: -5px;
 }
 
 section{
     position:absolute;
     z-index:2;
-    background-color:rgba(150, 130, 127, 0.5);
-    color: white;
+    background-color:rgba(255, 255, 255, 0.85);
+    text-shadow: 0 0 10px #c0c0c0;
+    color: black;
     padding: 3em;
     height: 100%;
     box-sizing:border-box;
@@ -40,7 +70,7 @@ section{
 }
 
 a{
-    color:#ffff00;
+    color: black;
 }
 
 a.sectionLink{
