--- a/style.css
+++ b/style.css
@@ -1,83 +1,55 @@
-html, body
-{
-    position: absolute;
-    background-color: black;
-    border:0;
-    margin:0;
-    padding:0;
-    width: 100%;
-    height: 100%;
-}
-
-body{
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 12pt;
-  line-height: 1.5;
-  background-color: hsl(200, 50%, 75%);
-}
-
-#frownies {
-  line-height: 1;
+html, body {
   position: absolute;
-  font-family: fixedsys, monospace;
-  font-size: 24pt;
-  padding: 0;
-  margin: 0;
+  border:0;
+  margin:0;
+  padding:0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
-.frowny {
-  margin: 5px;
-  display: inline-block;
-  border: solid 2px black;
-  padding: 5px;
-  border-radius: 10px;
-  transform: rotate(90deg);
-  box-shadow: 5px -5px 5px rgba(0, 0, 0, 0.25);
+body {
+  font-family: -apple-system, '.SFNSText-Regular', 'San Francisco', 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', sans-serif;
+  font-size: 12pt;
+  line-height: 1.5;
+  background-color: #E9F7FF;
+  color: #625747;
 }
 
-.frowny:hover {
-  padding: 10px;
-  margin-top: -5px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: -5px;
-}
-
-section{
-    position:absolute;
-    z-index:2;
-    background-color:rgba(255, 255, 255, 0.85);
-    text-shadow: 0 0 10px #c0c0c0;
-    color: black;
-    padding: 3em;
-    height: 100%;
-    box-sizing:border-box;
-    overflow-y: scroll;
+main{
+  position:absolute;
+  z-index:2;
+  padding: 3em;
+  height: 100%;
+  box-sizing:border-box;
+  overflow-y: scroll;
 }
 
 #portrait{
-    width:100%;
+  width:100%;
 }
 @media (min-width:750px){
-    #portrait{
-        max-width:50%;
-        float: right;
-        margin-left: 5em;
-    }
+  #portrait{
+    max-width:50%;
+    float: right;
+    margin-left: 5em;
+  }
 }
 
 a{
-    color: black;
+  display: inline-block;
+  color: black;
+  border-bottom: solid 1px black;
+  height: 1.3em;
+  text-decoration: none;
+  text-shadow: -0.03em 0 #E9F7FF,-0.06em 0 #E9F7FF,-0.09em 0 #E9F7FF,-0.12em 0 #E9F7FF,-0.15em 0 #E9F7FF,-0.18em 0 #E9F7FF,
+    0.03em 0 #E9F7FF,0.06em 0 #E9F7FF,0.09em 0 #E9F7FF,0.12em 0 #E9F7FF,0.15em 0 #E9F7FF,0.18em 0 #E9F7FF;
 }
 
 a.sectionLink{
-    display:block;
-    border:solid 1px #111;
-    padding:2em;
-    margin:1em;
-    font-size:24pt;
-    background-color:#222;
+  display:block;
+  border:solid 1px #111;
+  padding:2em;
+  margin:1em;
+  font-size:24pt;
+  background-color:#222;
 }
