--- a/index.pug
+++ b/index.pug
@@ -12,7 +12,7 @@ html
       img#portrait(src="img/2015-05.jpg", alt="portrait")
       h1 Sean T. McBeth
 
-      p I am a freelance software consultant in virtual reality, game development, and hardware prototyping. Between my clients, side projects, everyday needs for chores, sleeping, eating, and providing my wife and child the attention they deserves, if I didn't have a good system for getting things done, I'd be an emotional mess.
+      p I am a freelance software consultant in virtual reality, augmented reality, games, simulation, graphics, abstract data visualization, audio synthesis and processing, computer vision, peer-to-peer networking, desktop, Web, mobile, real-time communication, hardware prototyping, embedded systems, reporting, GIS, and relational database systems.
 
       p My current work is focused on Virtual Reality and Electronics. I've successfully bootstrapped and deployed multiple VR for Google Cardboard and HTC Vive, as well as a few hardware prototypes in radio and wireless input devices. Before VR, I built several analytics-heavy OLTP applications for desktop, Web, and mobile Web.
 
@@ -31,7 +31,6 @@ html
         li: a(href="http://sean-mcbeth.tumblr.com") Tumblr blog
         li: a(href="https://plus.google.com/+SeanMcBeth/posts") Google+
         li: a(href="https://news.ycombinator.com/user?id=moron4hire") Hacker News
-        li: a(href="http://www.gamedev.net/blog/43-working-late-past-midnight/") Gamedev.net
         li: a(href="https://www.crunchbase.com/person/sean-mcbeth#/entity") CrunchBase
         li: a(href="http://www.imdb.com/name/nm5111059/") IMDB (yup)
 
@@ -62,18 +61,18 @@ html
 
       h2 Press
       ul
-        li: a(href="http://dcinno.streetwise.co/2017/03/06/a-dc-virtual-reality-startup-now-lets-you-feel-in-vr/") A DC Virtual Reality Startup Now Lets You Feel in VR (DC Inno).
-        li: a(href="http://dailyfreepress.com/2017/01/18/ar-in-action-features-current-and-future-developments-in-technological-field/") AR in Action features current and future developments in technological field (Daily Free Press, Boston U).
-        li: a(href="https://venturebeat.com/2016/09/17/how-webvr-will-make-virtual-reality-massively-available/") How WebVR will make virtual reality massively available (VentureBeat).
-        li: a(href="http://www.techradar.com/news/gaming/how-one-of-the-first-vr-arcades-will-bring-us-together-in-our-own-little-worlds-1327005") How one of the first VR arcades will bring us together in our own little worlds (TechRadar).
-        li: a(href="http://sensics.com/why-webvr/") Why WebVR (Sensics blog).
-        li: a(href="https://www.sitepoint.com/build-virtual-reality-with-primrose-and-webvr/") Build Virtual Reality in VR with Primrose and WebVR (SitePoint).
+        li: a(href="http://dcinno.streetwise.co/2017/03/06/a-dc-virtual-reality-startup-now-lets-you-feel-in-vr/") A DC Virtual Reality Startup Now Lets You Feel in VR (DC Inno)
+        li: a(href="http://dailyfreepress.com/2017/01/18/ar-in-action-features-current-and-future-developments-in-technological-field/") AR in Action features current and future developments in technological field (Daily Free Press, Boston U)
+        li: a(href="https://venturebeat.com/2016/09/17/how-webvr-will-make-virtual-reality-massively-available/") How WebVR will make virtual reality massively available (VentureBeat)
+        li: a(href="http://www.techradar.com/news/gaming/how-one-of-the-first-vr-arcades-will-bring-us-together-in-our-own-little-worlds-1327005") How one of the first VR arcades will bring us together in our own little worlds (TechRadar)
+        li: a(href="http://sensics.com/why-webvr/") Why WebVR (Sensics blog)
+        li: a(href="https://www.sitepoint.com/build-virtual-reality-with-primrose-and-webvr/") Build Virtual Reality in VR with Primrose and WebVR (SitePoint)
 
       h2 Interviews
       ul
-        li: a(href="https://soundcloud.com/jon-wilkening/episode-16-sean-mcbeth") The Creative Bar: Episode 16.
+        li: a(href="https://soundcloud.com/jon-wilkening/episode-16-sean-mcbeth") The Creative Bar: Episode 16
         li: a(href="http://virtualrealityobserver.com/interview-sean-mcbeth-lead-vr-developer-of-notiontheory/") The Virtual Reality Observer
-        li: a(href="https://devdiner.com/interviews/sean-mcbeth-on-primrose-webvr") Sean McBeth on Primrose and WebVR development (Dev Diner).
+        li: a(href="https://devdiner.com/interviews/sean-mcbeth-on-primrose-webvr") Sean McBeth on Primrose and WebVR development (Dev Diner)
         li: a(href="http://www.blogtalkradio.com/dc-entrepreneur/2015/11/05/interview-with-sean-mcbeth-future-of-vr") DC Entrepreneur: Episode 2
 
       h2 Writing and Art
