--- a/index.pug
+++ b/index.pug
@@ -43,10 +43,20 @@ html
 
       h2 Volunteer
       ul
-        li I am the organizer for #[a(href="https://www.meetup.com/Alexandria-Code-Coffee/") Alexandria Code &amp; Coffee].
-        li I am a co-organizer for #[a(href="https://www.meetup.com/DCRealities/") DC Realities].
-        li I am the organizer for #[a(href="https://www.meetup.com/Alexandria-VR-Meetup/") Alexandria VR Meetup].
-        li I was the #[a(href="https://dcacm.org/2016/07/04/announcing-the-2016-2017-dc-acm-executive-board/") VR Program Chair] for #[a(href="https://dcacm.org") the Washington DC chapter] of #[a(href="https://www.acm.org") ACM].
+        li Present
+          ul
+            li Organizer for #[a(href="https://www.meetup.com/Alexandria-Code-Coffee/") Alexandria Code &amp; Coffee].
+            li Co-organizer for #[a(href="https://www.meetup.com/DCRealities/") DC Realities].
+            li Organizer for #[a(href="https://www.meetup.com/Alexandria-VR-Meetup/") Alexandria VR Meetup].
+            li Participant in the #[a(href="https://www.w3.org/community/webvr/participants") W3 WebVR Community Group].
+        li Past
+          ul
+            li #[a(href="https://dcacm.org/2016/07/04/announcing-the-2016-2017-dc-acm-executive-board/") VR Program Chair] for #[a(href="https://dcacm.org") the Washington DC chapter] of #[a(href="https://www.acm.org") ACM].
+            li Treasurer, events coordinator, and board member at #[a(href="http://wiki.hive76.org/Elections") Hive76].
+            li Charter President for Shippensburg University's chapter of #[a(href="http://upe.acm.org/") Upsilon Pi Epsilon], the Computer Science honor society.
+            li President for Shippensburg University's student ACM chapter.
+            li Vice-President for Shippensburg University's programming team.
+            li President for Penn State Mont Alto's engineering club.
 
       h2 Talks
       ul
@@ -62,11 +72,13 @@ html
       h2 Press
       ul
         li: a(href="http://dcinno.streetwise.co/2017/03/06/a-dc-virtual-reality-startup-now-lets-you-feel-in-vr/") A DC Virtual Reality Startup Now Lets You Feel in VR (DC Inno)
-        li: a(href="http://dailyfreepress.com/2017/01/18/ar-in-action-features-current-and-future-developments-in-technological-field/") AR in Action features current and future developments in technological field (Daily Free Press, Boston U)
+        li: a(href="http://dailyfreepress.com/2017/01/18/ar-in-action-features-current-and-future-developments-in-technological-field/") AR in Action features current and future developments in technological field (Daily Free Press, Boston University)
         li: a(href="https://venturebeat.com/2016/09/17/how-webvr-will-make-virtual-reality-massively-available/") How WebVR will make virtual reality massively available (VentureBeat)
+        li: a(href="http://www.thehoya.com/first-east-coast-virtual-reality-arcade-opens-in-d-c/") First East Coast Virtual Reality Arcade Opens in D.C. (The Hoya, Georgetown University)
         li: a(href="http://www.techradar.com/news/gaming/how-one-of-the-first-vr-arcades-will-bring-us-together-in-our-own-little-worlds-1327005") How one of the first VR arcades will bring us together in our own little worlds (TechRadar)
         li: a(href="http://sensics.com/why-webvr/") Why WebVR (Sensics blog)
         li: a(href="https://www.sitepoint.com/build-virtual-reality-with-primrose-and-webvr/") Build Virtual Reality in VR with Primrose and WebVR (SitePoint)
+        li: a(href="http://dcinno.streetwise.co/2015/08/14/washington-dc-virtual-reality-vr-tech-startups-hub/") The State of DC Virtual Reality Innovation: Part 1 (DC Inno)
 
       h2 Interviews
       ul
@@ -127,6 +139,11 @@ html
         li HTML5
         li Java
         li Racket
+
+      h2 Education
+      ul
+        li Bachelors of Science, Computer Science&mdash;#[a(href="http://www.ship.edu/CSE/") Shippensburg University], #[em cum laude] 2005.
+        li Bachelors of Science and Engineering, Computer Science&mdash;#[a(href="http://montalto.psu.edu/") Penn State Mont Alto] (transferred, 2002).
 
 
       h2 Thanks for reading
