back to aliased email address

--- a/index.pug
+++ b/index.pug
@@ -20,7 +20,7 @@ html
 
       h2 Contact Me
       ul
-        li: a(href="mailto:sean.mcbeth+web@primrosevr.com?subject=Website contact") Email
+        li: a(href="mailto:sean@seanmcbeth.com?subject=Website contact") Email
         li: a(href="https://github.com/capnmidnight") Github
         li: a(href="https://www.npmjs.com/~seanmcbeth") NPM
         li: a(href="https://twitter.com/Sean_McBeth") Twitter
