--- a/index.pug
+++ b/index.pug
@@ -34,12 +34,45 @@ html
         li: a(href="https://www.crunchbase.com/person/sean-mcbeth#/entity") CrunchBase
         li: a(href="http://www.imdb.com/name/nm5111059/") IMDB (yup)
 
-      h2 Current Projects
+      h2 Projects
       ul
-        li: a(href="https://www.primrosevr.com/") Primrose: build VR experiences in your browser
-        li: a(href="https://capnmidnight.github.io/marigold-build/") Marigold: a development environment for JavaScript Single-Page Applications
-        li: a(href="https://github.com/capnmidnight/plume") Plume: a VR teleconferencing system for the Web
-        li: a(href="https://github.com/capnmidnight/pliny") Pliny: a live-documentation system for JavaScript projects
+        li Present
+          ul
+            li: a(href="https://www.primrosevr.com/") Primrose: build VR experiences in your browser
+            li: a(href="https://capnmidnight.github.io/marigold-build/") Marigold: a development environment for JavaScript Single-Page Applications
+            li: a(href="https://github.com/capnmidnight/plume") Plume: a VR teleconferencing system for the Web
+            li: a(href="https://github.com/capnmidnight/pliny") Pliny: a live-documentation system for JavaScript projects
+
+        li Past
+          ul
+            li #[a(href="https://www.youtube.com/watch?v=PWvPEEpLCT0&feature=youtu.be&t=55") Smart-city VR diorama], with:
+              ul
+                li #[a(href="https://www.youtube.com/watch?v=gdiIqyTl_Kk") Traffic simulation] with #[a(href="https://www.youtube.com/watch?v=awmEM5jbZAk") night-time dependent effects]
+                li: a(href="https://www.youtube.com/watch?v=XL__CsW_L7A") Power grid simulation
+                li: a(href="https://www.youtube.com/watch?v=90hJ4h-rwk0") Day/night cycle for time-series simulation in games
+            li #[a(href="https://www.youtube.com/watch?v=xSSL8WqZT6o") Music beat detection] for #[a(href="https://www.youtube.com/watch?v=K_HJtNlNsmg&feature=youtu.be&t=20") game-play synchronization]
+            li: a(href="https://www.youtube.com/watch?v=CEYDYRBhC2E") AR for business cards
+            li: a(href="https://medium.com/@notiontheory/building-a-haptic-feedback-glove-for-virtual-reality-77232999a2d7") Haptic Glove, v2
+            li: a(href="https://plus.google.com/+SeanMcBeth/posts/gKF7sQ2FAhh") Haptic Glove, v1
+            li: a(href="https://www.bloomberg.com/news/articles/2016-12-06/goldman-sachs-alum-turns-to-virtual-reality-to-sell-57-million-mansion") REX: 360° Real Estate Tours
+            li: a(href="https://www.youtube.com/watch?v=fhvDLiuSYis") AR for Religious Preference
+            li: a(href="https://makeoffices.com/blog/the-east-coasts-first-virtual-reality-arcade-launches-at-makeoffices-dc/") The East Coast's first Virtual Reality Arcade
+            li: a(href="https://www.linkedin.com/pulse/i-just-hacked-my-brain-sean-mcbeth") DIY Galvanic Vestibular Stimulation (virtual balance)
+            li: a(href="https://youtu.be/-oOK6dDr74I?t=61") Live-programmable VR environment
+            li: a(href="http://www.highlandfrs.com") Highland Solutions: a consultancy for helping people wrangle their data
+            li: a(href="https://www.youtube.com/watch?v=5SXsu_MEzmU") Genetic algorithm visualizer
+            li: a(href="https://github.com/capnmidnight/SqlSiphon") SqlSiphon: a database management library for .NET
+            li: a(href="https://www.justwritedammit.com/") Just Write, Dammit! A book writing platform
+            li: a(href="https://www.youtube.com/watch?v=KcDqzLGkre4&feature=youtu.be&t=43") Rieker CARS: DOT-compliant road sign recommendations
+            li: a(href="https://github.com/capnmidnight/small-town") Small Town: interactive fiction + AI Shakespere
+            li: a(href="http://sean-mcbeth.tumblr.com/post/60153233552/a-thing-i-built-a-while-ago-you-can-see-it-in") Speaking Accent Recognition Testing Machine
+            li: a(href="https://www.youtube.com/watch?v=j4eOyNT6JsY") Laser Harp
+            li: a(href="pong/") Mobile-responsive Pong game
+            li: a(href="http://www.hive76.org/the-no-video-game") The No-Video Game
+            li: a(href="http://www.hive76.org/standing-workstations") Standing Workstation
+            li: a(href="synth/") Scratch Live! An HTML 5 synthesizer
+            li: a(href="https://www.youtube.com/watch?v=RPdBk-qXuzg") 2-Player, Competitive, Arm-Wrestling Tetris
+            li: a(href="http://wiki.hive76.org/Burning_Zombie_Dummy") Indie-movie pyrotechnic effects
 
       h2 Volunteer
       ul
@@ -67,7 +100,7 @@ html
         li #[a(href="http://vrar.withthebest.com/#speakers") VR/AR With The Best]: I gave a webinar and ran personal Q&amp;A sessions on using Primrose to build VR applications.
         li #[a(href="https://storify.com/ShahnazKamberi/stratfordwbcsit") Stratford University]: I described the essentials of Virtual Reality for Stratford's CS/IT students.
         li #[a(href="https://nvite.com/CodePenDC/ec85") CodePen DC]: I spoke on the emerging WebVR API and how developers can get started.
-        li and #[a(href="https://www.facebook.com/dcvirtualreality/videos/1091494284227423/") several] #[a(href="https://www.facebook.com/dcvirtualreality/videos/1452036654839849/") events] for #[a(href="https://www.meetup.com/DCRealities/events/229971228/") DCVR], our local VR enthusiasts meetup.
+        li and #[a(href="https://www.facebook.com/dcvirtualreality/videos/1091494284227423/") several] #[a(href="https://www.facebook.com/dcvirtualreality/videos/1452036654839849/") events] for #[a(href="https://www.meetup.com/DCRealities/events/229971228/") DCVR], our local VR enthusiasts' meetup.
 
       h2 Press
       ul
@@ -96,37 +129,6 @@ html
         li: a(href="http://sean-mcbeth.tumblr.com/tagged/Germany") Photography from Germany
         li: a(href="http://sean-mcbeth.tumblr.com/tagged/abstract") Abstract photography with prisms
         li: a(href="http://makezine.com/projects/make-35/making-pigments/") MAKE Magazine, Issue 35: Making Pigments
-
-      h2 Past Projects
-      ul
-        li #[a(href="https://www.youtube.com/watch?v=PWvPEEpLCT0&feature=youtu.be&t=55") Smart-city VR diorama], with:
-          ul
-            li #[a(href="https://www.youtube.com/watch?v=gdiIqyTl_Kk") Traffic simulation] with #[a(href="https://www.youtube.com/watch?v=awmEM5jbZAk") night-time dependent effects]
-            li: a(href="https://www.youtube.com/watch?v=XL__CsW_L7A") Power grid simulation
-            li: a(href="https://www.youtube.com/watch?v=90hJ4h-rwk0") Day/night cycle for time-series simulation in games
-        li #[a(href="https://www.youtube.com/watch?v=xSSL8WqZT6o") Music beat detection] for #[a(href="https://www.youtube.com/watch?v=K_HJtNlNsmg&feature=youtu.be&t=20") game-play synchronization]
-        li: a(href="https://www.youtube.com/watch?v=CEYDYRBhC2E") AR for business cards
-        li: a(href="https://medium.com/@notiontheory/building-a-haptic-feedback-glove-for-virtual-reality-77232999a2d7") Haptic Glove, v2
-        li: a(href="https://plus.google.com/+SeanMcBeth/posts/gKF7sQ2FAhh") Haptic Glove, v1
-        li: a(href="https://www.bloomberg.com/news/articles/2016-12-06/goldman-sachs-alum-turns-to-virtual-reality-to-sell-57-million-mansion") REX: 360° Real Estate Tours
-        li: a(href="https://www.youtube.com/watch?v=fhvDLiuSYis") AR for Religious Preference
-        li: a(href="https://makeoffices.com/blog/the-east-coasts-first-virtual-reality-arcade-launches-at-makeoffices-dc/") The East Coast's first Virtual Reality Arcade
-        li: a(href="https://www.linkedin.com/pulse/i-just-hacked-my-brain-sean-mcbeth") DIY Galvanic Vestibular Stimulation (virtual balance)
-        li: a(href="https://youtu.be/-oOK6dDr74I?t=61") Live-programmable VR environment
-        li: a(href="http://www.highlandfrs.com") Highland Solutions: a consultancy for helping people wrangle their data
-        li: a(href="https://www.youtube.com/watch?v=5SXsu_MEzmU") Genetic algorithm visualizer
-        li: a(href="https://github.com/capnmidnight/SqlSiphon") SqlSiphon: a database management library for .NET
-        li: a(href="https://www.justwritedammit.com/") Just Write, Dammit! A book writing platform
-        li: a(href="https://www.youtube.com/watch?v=KcDqzLGkre4&feature=youtu.be&t=43") Rieker CARS: DOT-compliant road sign recommendations
-        li: a(href="https://github.com/capnmidnight/small-town") Small Town: interactive fiction + AI Shakespere
-        li: a(href="http://sean-mcbeth.tumblr.com/post/60153233552/a-thing-i-built-a-while-ago-you-can-see-it-in") Speaking Accent Recognition Testing Machine
-        li: a(href="https://www.youtube.com/watch?v=j4eOyNT6JsY") Laser Harp
-        li: a(href="pong/") Mobile-responsive Pong game
-        li: a(href="http://www.hive76.org/the-no-video-game") The No-Video Game
-        li: a(href="http://www.hive76.org/standing-workstations") Standing Workstation
-        li: a(href="synth/") Scratch Live! An HTML 5 synthesizer
-        li: a(href="https://www.youtube.com/watch?v=RPdBk-qXuzg") 2-Player, Competitive, Arm-Wrestling Tetris
-        li: a(href="http://wiki.hive76.org/Burning_Zombie_Dummy") Indie-movie pyrotechnic effects
 
       h2 Programming Languages
       ul
