--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
+  width: 100%;
   height: 100%;
 }
 body {
@@ -19,8 +20,8 @@ body {
 main {
   padding: 3em;
 }
-#portrait {
-  width: 100vw;
+img {
+  width: 80vw;
 }
 @media (min-width: 750px) {
   #portrait {
