--- a/index.styl
+++ b/index.styl
@@ -6,6 +6,7 @@ html, body
   margin 0
   padding 0
   border 0
+  width 100%
   height 100%
 
 body
@@ -18,8 +19,8 @@ body
 main
   padding 3em
 
-#portrait
-  width 100vw
+img
+  width 80vw
 
 @media (min-width:750px)
   #portrait
