--- a/index.pug
+++ b/index.pug
@@ -93,7 +93,7 @@ html
 
   section#menu
     ul
-      li: a(href="#projects") .proj
+      li: a(href="#projects") .com
       li: a(href="#community") .org
       li: a(href="#talks") .net
       li: a(href="#press") .tv
