--- a/other.pug
+++ b/other.pug
@@ -12,14 +12,6 @@ html
 
       section#bonafides
 
-        h2: a(name="art") Art
-        ul
-          li: a(href="http://sean-mcbeth.tumblr.com/tagged/Galapagos") Photography and writing on the Galapagos Islands
-          li: a(href="http://sean-mcbeth.tumblr.com/tagged/Ireland") Photography from Ireland
-          li: a(href="http://sean-mcbeth.tumblr.com/tagged/Germany") Photography from Germany
-          li: a(href="http://sean-mcbeth.tumblr.com/tagged/abstract") Abstract photography with prisms
-          li: a(href="http://www.amazon.com/dp/B00J3XY6N2") Three Years: an ebook
-
         h2: a(name="edu") Education
         ul
           li Bachelors of Science, Computer Science&mdash;#[a(href="http://www.ship.edu/CSE/") Shippensburg University], #[em cum laude] 2005.
@@ -59,6 +51,11 @@ html
           li: a(href="https://www.justwritedammit.com/") Just Write, Dammit! A book writing platform
           li: a(href="https://www.youtube.com/watch?v=KcDqzLGkre4&feature=youtu.be&t=43") Rieker CARS: DOT-compliant road sign recommendations
           li: a(href="https://github.com/capnmidnight/small-town") Small Town: interactive fiction + AI Shakespere
+          li: a(href="http://sean-mcbeth.tumblr.com/tagged/Germany") Photography from Germany
+          li: a(href="http://sean-mcbeth.tumblr.com/tagged/Ireland") Photography from Ireland
+          li: a(href="http://sean-mcbeth.tumblr.com/tagged/Galapagos") Photography and writing on the Galapagos Islands
+          li: a(href="http://sean-mcbeth.tumblr.com/tagged/abstract") Abstract photography with prisms
+          li: a(href="http://www.amazon.com/dp/B00J3XY6N2") Three Years: an ebook
           li: a(href="http://sean-mcbeth.tumblr.com/post/60153233552/a-thing-i-built-a-while-ago-you-can-see-it-in") Speaking Accent Recognition Testing Machine
           li: a(href="https://www.youtube.com/watch?v=j4eOyNT6JsY") Laser Harp
           li: a(href="pong/") Mobile-responsive Pong game
@@ -79,9 +76,8 @@ html
 
   section#menu
     ul
-      li: a(href="#art") .art
       li: a(href="#edu") .edu
-      li: a(href="#profiles") .inet
-      li: a(href="#projects") .proj
+      li: a(href="#profiles") .net
+      li: a(href="#projects") .com
       li: a(href="#volunteer") .org
       li: a(href="index.html") home/
